--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,11 @@
 
+body {
+  font-family: "Montserrat";
+}
+
 #title {
   background-color: #ff4c68;
+  color: #fff;
 }
 
 .container-fluid {
@@ -9,6 +14,43 @@
 
 h1 {
   font-family: "Montserrat";
-  font-size: 3rem;
+  font-size: 3.5rem;
   line-height: 1.5;
+}
+
+
+
+/* Navigation Bar */
+
+.navbar {
+  padding: 0 0 5.5rem;
+}
+
+.nav-item {
+  padding: 0 18px;
+}
+
+.nav-link {
+  font-size: 1.2rem;
+  font-family: "Montserrat-light";
+}
+
+.navbar-brand {
+  font-family: "Ubuntu";
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
+/* Download Button */
+
+.download-btn {
+  margin: 5% 3% 5% 0;
+}
+
+
+/* Image */
+
+.title-image {
+  width: 60%;
+  transform: rotate(25deg);
 }
