--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,13 @@ h1 {
   line-height: 1.5;
 }
 
+h3 {
+  font-size: 1.5rem;
+}
+
+p {
+  color: #8f8f8f;
+}
 
 
 /* Navigation Bar */
@@ -53,4 +60,22 @@ h1 {
 .title-image {
   width: 60%;
   transform: rotate(25deg);
+}
+
+#features {
+  padding: 7% 15%;
+}
+
+.feature-box {
+  text-align: center;
+  padding: 5%;
+}
+
+.icon {
+  color: #ef8172;
+  margin-bottom: 1rem;
+}
+
+.icon:hover {
+  color: #ff4c68;
 }
