--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,11 @@ h1 {
   line-height: 1.5;
 }
 
+h2 {
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
 h3 {
   font-size: 1.5rem;
 }
@@ -78,4 +83,30 @@ p {
 
 .icon:hover {
   color: #ff4c68;
+}
+
+/* Testimonials */
+
+#testimonials {
+  text-align: center;
+  background-color: #ef8172;
+  color: #fff;
+  padding: 7% 15%;
+}
+
+.dog-img {
+  width: 10%;
+  border-radius: 100%;
+  margin: 20px;
+}
+
+#press {
+  text-align: center;
+  background-color: #ef8172;
+  padding: 3%;
+}
+
+.press-logo {
+  width: 15%;
+  margin: 30px;
 }
