--- a/css/styles.css
+++ b/css/styles.css
@@ -91,13 +91,16 @@ p {
   text-align: center;
   background-color: #ef8172;
   color: #fff;
-  padding: 7% 15%;
 }
 
-.dog-img {
+.testimonial-image {
   width: 10%;
   border-radius: 100%;
   margin: 20px;
+}
+
+.carousel-item {
+  padding: 7% 15%;
 }
 
 #press {
