--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ body {
 }
 
 .container-fluid {
-  padding: 3% 15%;
+  padding: 3% 15% 8%;
 }
 
 h1 {
@@ -65,10 +65,14 @@ p {
 .title-image {
   width: 60%;
   transform: rotate(25deg);
+  position: absolute;
+  right: 30%;
 }
 
 #features {
   padding: 7% 15%;
+  background-color: #fff;
+  position: relative;
 }
 
 .feature-box {
@@ -112,4 +116,14 @@ p {
 .press-logo {
   width: 15%;
   margin: 30px;
+}
+
+
+#pricing {
+  padding: 100px;
+  text-align: center;
+}
+
+.pricing-column {
+  padding: 3% 2%;
 }
