--- a/css/styles.css
+++ b/css/styles.css
@@ -128,6 +128,28 @@ p {
   padding: 3% 2%;
 }
 
+#cta {
+  background-color: #ff4c68;
+  color: #fff;
+  text-align: center;
+  padding: 7% 15%;
+}
+
+.cta-heading {
+  font-size: 3.5rem;
+  line-height: 1.5;
+}
+
+/* Footer */
+
+#footer {
+  text-align: center;
+  padding: 7% 15%;
+}
+
+.social-icon {
+  margin: 20px 10px;
+}
 @media (max-width : 1028px) {
 
   #title {
