--- a/css/styles.css
+++ b/css/styles.css
@@ -1,36 +1,43 @@
 
 body {
   font-family: "Montserrat";
-}
-
-#title {
-  background-color: #ff4c68;
-  color: #fff;
+  text-align: center;
 }
 
 .container-fluid {
-  padding: 3% 15% 8%;
+  padding: 7% 15%;
 }
 
-h1 {
+h1, h2, h3, h4, h5 ,h6 {
   font-family: "Montserrat";
-  font-size: 3.5rem;
-  line-height: 1.5;
-}
-
-h2 {
-  font-size: 3rem;
-  line-height: 1.5;
-}
-
-h3 {
-  font-size: 1.5rem;
 }
 
 p {
   color: #8f8f8f;
 }
 
+.big-heading {
+  font-family: "Montserrat";
+  font-size: 3.5rem;
+  line-height: 1.5;
+}
+
+.section-heading {
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
+/* Title Heading  */
+
+#title {
+  background-color: #ff4c68;
+  color: #fff;
+  text-align: left;
+}
+
+#title .container-fluid {
+  padding: 3% 15% 7%;
+}
 
 /* Navigation Bar */
 
@@ -70,13 +77,15 @@ p {
 }
 
 #features {
-  padding: 7% 15%;
   background-color: #fff;
   position: relative;
 }
 
+.feature-title {
+  font-size: 1.5rem;
+}
+
 .feature-box {
-  text-align: center;
   padding: 5%;
 }
 
@@ -92,9 +101,13 @@ p {
 /* Testimonials */
 
 #testimonials {
-  text-align: center;
   background-color: #ef8172;
   color: #fff;
+}
+
+.testimonial-text {
+  font-size: 3rem;
+  line-height: 1.5;
 }
 
 .testimonial-image {
@@ -103,12 +116,7 @@ p {
   margin: 20px;
 }
 
-.carousel-item {
-  padding: 7% 15%;
-}
-
 #press {
-  text-align: center;
   background-color: #ef8172;
   padding: 3%;
 }
@@ -118,10 +126,15 @@ p {
   margin: 30px;
 }
 
+/* Pricing  */
+
+.price-text {
+  font-size: 3rem;
+  line-height: 1.5;
+}
 
 #pricing {
   padding: 100px;
-  text-align: center;
 }
 
 .pricing-column {
@@ -131,21 +144,9 @@ p {
 #cta {
   background-color: #ff4c68;
   color: #fff;
-  text-align: center;
-  padding: 7% 15%;
-}
-
-.cta-heading {
-  font-size: 3.5rem;
-  line-height: 1.5;
 }
 
 /* Footer */
-
-#footer {
-  text-align: center;
-  padding: 7% 15%;
-}
 
 .social-icon {
   margin: 20px 10px;
