--- a/css/styles.css
+++ b/css/styles.css
@@ -27,16 +27,20 @@ p {
   line-height: 1.5;
 }
 
-/* Title Heading  */
-
-#title {
+.coloured-section {
   background-color: #ff4c68;
   color: #fff;
-  text-align: left;
 }
+
+.white-section {
+  background-color: #fff;
+}
+
+/* Title Heading  */
 
 #title .container-fluid {
   padding: 3% 15% 7%;
+  text-align: left;
 }
 
 /* Navigation Bar */
@@ -77,7 +81,6 @@ p {
 }
 
 #features {
-  background-color: #fff;
   position: relative;
 }
 
@@ -102,7 +105,6 @@ p {
 
 #testimonials {
   background-color: #ef8172;
-  color: #fff;
 }
 
 .testimonial-text {
@@ -139,11 +141,6 @@ p {
 
 .pricing-column {
   padding: 3% 2%;
-}
-
-#cta {
-  background-color: #ff4c68;
-  color: #fff;
 }
 
 /* Footer */
